--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .menu li {
-    padding-left: 3rem;
+    padding: 2rem;
 }
 
 .menu a{
@@ -35,8 +35,102 @@
 }
 
 .hero {
-    background-image: url("https://placeimg.com/1420/720/arch");
+    background-image: url("https://placeimg.com/1800/720/arch");
     background-color: rgba(0, 0, 0, .75);
     min-height: 80vh;
     background-repeat: no-repeat;
 }
+
+.container {
+    background-color: white;
+    height: 400px;
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+   
+ }
+ 
+ .box {
+    color: #000000;
+ }
+ 
+ .box h2{
+     padding-bottom: 10px;
+ }
+
+ .box1{
+    height: 320px;
+    width: 180px;
+ }
+ 
+ .box2{
+    height: 320px;
+    width: 180px;
+ }
+ 
+ .box3{
+    height: 320px;
+    width: 180px;
+ }
+ 
+ .box4{
+    height: 320px;
+    width: 180px;
+ }
+
+ .container2 {
+    background-color: white;
+    height: 300px;
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 80px;
+ }
+
+ .item{
+     display: flex;
+     flex-direction: row;
+ }
+
+ 
+@media screen and (max-width: 760px) {
+
+    .header {
+        display: flex;
+        flex-direction: column;
+    }
+  
+    .menu {
+        display: flex;
+        justify-content: center;
+    }
+
+    .menu li {
+        padding: 10px;
+         }
+
+    .container box{
+        display: flex;
+        flex-direction: row;
+
+    }
+
+    .container{
+        height: 100%;
+        background-color: #fff;
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin-top: 50px;
+      }
+
+      .box {
+        margin-bottom: 25px;
+   }
+    }
